package WeatherApp.displays;

public interface DisplayElement {
    public void display();
}
