package WeatherApp.observer;

public interface Observer {
    public void update();
}
