' Generated by UML Generator
' Encoded: lLRHRjCm57tlL_WnXJQg-hO8fg4Ej4aW49d40-B1TMuJGsn7zarP6Vjtd3HfOtlPLcdYfMroZi-vnxc-wOL1gh4MvSJyuhAYcWh2IchCEqJDrpN2DLCovN-0B2O5pu0mhba9aqdB8bT0yLfcS7l9JLNI7RcR438l-hi9sPIA8dbB5l5Yqq2_BLI0lgH84_BjUD5WS_lnsbUCnbPC6tPTPHGXcYPagtZMY30bAblsGIR2heWPqKNtSzfzDmfPPzDBtFVHFYWDZ1fqah5QQv3uHOCnjOPZlkLPVBPi4zh5Flwiu9xVYRaVoi4bWjvG1gJJV5-2iDMtKSQ3h_OPLqfc7BcInja11561fkYcAsh1BNjtIk0ndnT8lW-I8aLka3CtWQ2tDpP4s9k2InTOBXPzvBGMuG9PYwz0Covpan2xsy-A7LJreaywhTS_WNMFM4DkdK1_NXlGMz2HIaZ_Uo2eGQWjF46I2lbcrmCctEr1uVjzLZqt8Hzj6M_wjUSdjL4L7gLs6mTsqVH_XRMG0DgKqvmZiogep24RmWRmqu0HXJbdn4iv8rx6WLmEU7DKY8Q3oq9NdP1_lny_n_jEZ_IvzatYDPZ_FDjsLNBFlJFD5RidWd8PKTtqVMfV53B__cCW4BmLulZl-S5s17PdL4XwDPyxvycVpwx7WwXduNDyXz51w5ezJlCyHyc-UJYyNDSHtBCBMO5FDp3YU20-FCkjRCTo06ML3YikG6RsRyG_
' URL: http://www.plantuml.com/plantuml/uml/lLRHRjCm57tlL_WnXJQg-hO8fg4Ej4aW49d40-B1TMuJGsn7zarP6Vjtd3HfOtlPLcdYfMroZi-vnxc-wOL1gh4MvSJyuhAYcWh2IchCEqJDrpN2DLCovN-0B2O5pu0mhba9aqdB8bT0yLfcS7l9JLNI7RcR438l-hi9sPIA8dbB5l5Yqq2_BLI0lgH84_BjUD5WS_lnsbUCnbPC6tPTPHGXcYPagtZMY30bAblsGIR2heWPqKNtSzfzDmfPPzDBtFVHFYWDZ1fqah5QQv3uHOCnjOPZlkLPVBPi4zh5Flwiu9xVYRaVoi4bWjvG1gJJV5-2iDMtKSQ3h_OPLqfc7BcInja11561fkYcAsh1BNjtIk0ndnT8lW-I8aLka3CtWQ2tDpP4s9k2InTOBXPzvBGMuG9PYwz0Covpan2xsy-A7LJreaywhTS_WNMFM4DkdK1_NXlGMz2HIaZ_Uo2eGQWjF46I2lbcrmCctEr1uVjzLZqt8Hzj6M_wjUSdjL4L7gLs6mTsqVH_XRMG0DgKqvmZiogep24RmWRmqu0HXJbdn4iv8rx6WLmEU7DKY8Q3oq9NdP1_lny_n_jEZ_IvzatYDPZ_FDjsLNBFlJFD5RidWd8PKTtqVMfV53B__cCW4BmLulZl-S5s17PdL4XwDPyxvycVpwx7WwXduNDyXz51w5ezJlCyHyc-UJYyNDSHtBCBMO5FDp3YU20-FCkjRCTo06ML3YikG6RsRyG_
' Generated on: 2025-12-07T20:13:51.347392

@startuml
skinparam classAttributeIconSize 0
hide circle

class HeatIndexDisplay {
  -heatIndex: float = 0.0f
  -weatherData: WeatherData
  --
  +HeatIndexDisplay(weatherData: WeatherData)
  +update(): void
  -computeHeatIndex(t: float, rh: float): float
  +display(): void
}

class ForecastDisplay {
  -currentPressure: float = 29.92f
  -lastPressure: float
  -weatherData: WeatherData
  --
  +ForecastDisplay(weatherData: WeatherData)
  +update(): void
  +display(): void
}

interface DisplayElement {
  +display(): void
}

class CurrentConditionsDisplay {
  -temperature: float
  -humidity: float
  -weatherData: WeatherData
  --
  +CurrentConditionsDisplay(weatherData: WeatherData)
  +update(): void
  +display(): void
}

class StatisticsDisplay {
  -maxTemp: float = 0.0f
  -minTemp: float = 200
  -tempSum: float = 0.0f
  -numReadings: int
  -weatherData: WeatherData
  --
  +StatisticsDisplay(weatherData: WeatherData)
  +update(): void
  +display(): void
}

interface Subject {
  +registerObserver(o: Observer): void
  +removeObserver(o: Observer): void
  +notifyObservers(): void
}

class WeatherData {
  -observers: List<Observer>
  -temperature: float
  -humidity: float
  -pressure: float
  --
  +WeatherData()
  +registerObserver(o: Observer): void
  +removeObserver(o: Observer): void
  +notifyObservers(): void
  +measurementsChanged(): void
  +setMeasurements(temperature: float, humidity: float, pressure: float): void
  +getTemperature(): float
  +getHumidity(): float
  +getPressure(): float
}

interface Observer {
  +update(): void
}

class WeatherStation {
  +{static} main(args: String[]): void
}

HeatIndexDisplay ..|> Observer
HeatIndexDisplay ..|> DisplayElement
HeatIndexDisplay *-- WeatherData
ForecastDisplay ..|> Observer
ForecastDisplay ..|> DisplayElement
ForecastDisplay *-- WeatherData
CurrentConditionsDisplay ..|> Observer
CurrentConditionsDisplay ..|> DisplayElement
CurrentConditionsDisplay *-- WeatherData
StatisticsDisplay ..|> Observer
StatisticsDisplay ..|> DisplayElement
StatisticsDisplay *-- WeatherData
Subject ..> Observer
WeatherData ..|> Subject
WeatherData o-- Observer
@enduml